--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\win10\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.2
-executable = C:\Users\win10\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\win10\AppData\Local\Programs\Python\Python312\python.exe -m venv G:\database\app.py\myenv
+executable = F:\flutter_apps\speech_pilot\myenv\Scripts\python.exe
+command = F:\flutter_apps\speech_pilot\myenv\Scripts\python.exe -m venv F:\flutter_apps\speech_pilot\myenv
